fix ui out of stock diamond detail

--- a/DiamondStore/Pages/DiamondDetail.cshtml
+++ b/DiamondStore/Pages/DiamondDetail.cshtml
@@ -21,7 +21,7 @@
                 }
                 else
                 {
-                    <img src="default-image-url.jpg" alt="Default Diamond Image" class="img-fluid" />
+                    <img src="~/images/default-product.png" alt="Default Diamond Image" class="img-fluid" />
                 }
             </div>
             <div class="col-md-6">
@@ -42,19 +42,17 @@
                 </dl>
 
                 <div class="actions">
-                    @if (Model.Diamond.DiamondInventory > 0)
-                    {
-                        <form method="post" asp-page-handler="AddToCart">
+                    <form method="post" asp-page-handler="AddToCart">
+                        @if (Model.Diamond.DiamondInventory > 0)
+                        {
                             <button class="btn btn-primary" type="submit">Add to Cart</button>
                             <button class="btn btn-success">Buy Now</button>
-                        </form>
-                    }
-                    else
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            Out of Stock
-                        </div>
-                    }
+                        }
+                        else
+                        {
+                            <button class="btn btn-primary" type="button" disabled>Out of Stock</button>
+                        }
+                    </form>
                 </div>
             </div>
         </div>
@@ -65,12 +63,19 @@
                 @foreach (var relatedDiamond in Model.RelatedDiamonds)
                 {
                     <div class="col-md-3">
-                        <div class="card">
-                            <img src="@relatedDiamond.Image?.ImageUrl ?? " default-image-url.jpg"" class="card-img-top" alt="Related Diamond">
+                        <div class="card @(relatedDiamond.DiamondInventory == 0 ? "out-of-stock" : "")">
+                            <img src="@relatedDiamond.Image?.ImageUrl ?? " ~ /images/default-product.png"" class="card-img-top" alt="Related Diamond">
                             <div class="card-body">
                                 <h5 class="card-title">@relatedDiamond.DiamondName</h5>
                                 <p class="card-text">@relatedDiamond.DiamondPrice.ToString("C")</p>
-                                <a href="/DiamondDetail/@relatedDiamond.DiamondId" class="btn btn-primary">View Details</a>
+                                @if (relatedDiamond.DiamondInventory > 0)
+                                {
+                                    <a href="/DiamondDetail/@relatedDiamond.DiamondId" class="btn btn-primary">View Details</a>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-primary" type="button" disabled>Out of Stock</button>
+                                }
                             </div>
                         </div>
                     </div>
@@ -88,5 +93,24 @@
 
     .related-products .card {
         margin-bottom: 20px;
+    }
+
+    .out-of-stock {
+        opacity: 0.6;
+    }
+
+    .out-of-stock-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.8);
+        color: red;
+        font-size: 1.5rem;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 </style>
