--- a/DiamondStore/Pages/Admin/Dashboard.cshtml
+++ b/DiamondStore/Pages/Admin/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DiamondStore.Pages.Admin.DashboardModel
 @{
-    ViewData["Title"] = "User";
+    ViewData["Title"] = "Dashboard";
     Layout = "_LayoutAdmin";
 }
 
@@ -9,7 +9,7 @@
     <main class="h-full overflow-y-auto">
         <div class="container px-6 mx-auto grid">
             <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
-                User
+                Dashboard
             </h2>
             <!-- Cards -->
             <div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4">
