--- a/DiamondStore/Pages/User/OrderHistory.cshtml
+++ b/DiamondStore/Pages/User/OrderHistory.cshtml
@@ -78,7 +78,7 @@
                                                         data-toggle="modal"
                                                         data-target="#orderDetailsModal"
                                                         data-id="@order.PaymentId">
-                                                    Chi tiết
+                                                    Details
                                                 </button>
                                             </td>
                                         </tr>
