--- a/DiamondStore/Pages/Checkout.cshtml
+++ b/DiamondStore/Pages/Checkout.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<section id="center" class="center_shop"> 
+<section id="center" class="center_shop">
     <div class="container">
         <div class="row">
             <div class="center_shop_t clearfix">
@@ -17,7 +17,7 @@
                 <div class="col-sm-6">
                     <div class="center_shop_tr text-right clearfix">
                         <h6 class="col_2">You are here: <a href="/">Home</a> / Checkout</h6>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -29,96 +29,72 @@
         <div class="row">
             <div class="checkout_1 clearfix">
                 <div class="col-sm-8">
-                    <div class="checkout_1l clearfix">
-                        <h3 class="mgt">Make Your Checkout Here</h3>
-                        <p>Please register in order to checkout more quickly</p>
-                    </div><br>
-                    <div class="checkout_1l1 clearfix">
-                        <div class="col-sm-6 space_left">
-                            <h5>First Name <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
+                    <form id="checkoutForm" method="post">
+                        <div class="checkout_1l clearfix">
+                            <h3 class="mgt">Make Your Checkout Here</h3>
+                        </div><br>
+
+                        <div asp-validation-summary="All" class="text-danger"></div>
+
+                        <input type="hidden" asp-for="UserProfile.UserId" />
+                        <div class="checkout_1l1 clearfix">
+                            <div class="col-sm-6 space_left">
+                                <h5>First Name <span class="col_1">*</span></h5>
+                                <input class="form-control" asp-for="UserProfile.FirstName" />
+                                <span asp-validation-for="UserProfile.FirstName" class="text-danger"></span>
+                            </div>
+                            <div class="col-sm-6 space_left">
+                                <h5>Last Name <span class="col_1">*</span></h5>
+                                <input class="form-control" asp-for="UserProfile.LastName" />
+                                <span asp-validation-for="UserProfile.LastName" class="text-danger"></span>
+                            </div>
                         </div>
-                        <div class="col-sm-6 space_left">
-                            <h5>Last Name <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
+                        <div class="checkout_1l1 clearfix">
+                            <div class="col-sm-6 space_left">
+                                <h5>Email Address <span class="col_1">*</span></h5>
+                                <input class="form-control" asp-for="UserProfile.Email" />
+                                <span asp-validation-for="UserProfile.Email" class="text-danger"></span>
+                            </div>
+                            <div class="col-sm-6 space_left">
+                                <h5>Phone Number <span class="col_1">*</span></h5>
+                                <input class="form-control" asp-for="UserProfile.PhoneNumber" />
+                                <span asp-validation-for="UserProfile.PhoneNumber" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="checkout_1l1 clearfix">
-                        <div class="col-sm-6 space_left">
-                            <h5>Email Address <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
+                        <div class="checkout_1l1 clearfix">
+                            <h5>Address<span class="col_1">*</span></h5>
+                            <input class="form-control" asp-for="UserProfile.Address" />
+                            <span asp-validation-for="UserProfile.Address" class="text-danger"></span>
                         </div>
-                        <div class="col-sm-6 space_left">
-                            <h5>Phone Number <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
+                        <div>
+                            <h4>PAYMENTS</h4>
+                            <hr class="hr_1">
+                            @foreach (var method in Model.PaymentMethods)
+                            {
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="paymentMethods" value="@method.PaymentMethodId" id="payment_@method.PaymentMethodId" @(method.Status ? "" : "disabled")>
+                                    <label class="form-check-label @(method.Status ? "" : "text-muted")" for="payment_@method.PaymentMethodId">
+                                        @method.PaymentMethodName
+                                    </label>
+                                </div>
+                            }
                         </div>
-                    </div>
-                    <div class="checkout_1l1 clearfix">
-                        <div class="col-sm-6 space_left">
-                            <h5>Country <span class="col_1">*</span></h5>
-                            <select class="form-control">
-                                <option>India</option>
-                                <option>Paksitan</option>
-                                <option>Russia</option>
-                                <option>England</option>
-                                <option>Nepal</option>
-                            </select>
-                        </div>
-                        <div class="col-sm-6 space_left">
-                            <h5>State / Divition <span class="col_1">*</span></h5>
-                            <select class="form-control">
-                                <option>UP</option>
-                                <option>MP</option>
-                                <option>Bihar</option>
-                                <option>Delhi</option>
-                                <option>Jharkhand</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="checkout_1l1 clearfix">
-                        <div class="col-sm-6 space_left">
-                            <h5>Address Line 1 <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
-                        </div>
-                        <div class="col-sm-6 space_left">
-                            <h5>Address Line 2 <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
-                        </div>
-                    </div>
-                    <div class="checkout_1l1 clearfix">
-                        <div class="col-sm-6 space_left">
-                            <h5>Postal Code <span class="col_1">*</span></h5>
-                            <input class="form-control" type="text">
-                        </div>
-                        <div class="col-sm-6 space_left">
-                            <h5>Company <span class="col_1">*</span></h5>
-                            <select class="form-control">
-                                <option>Microsoft</option>
-                                <option>Xaiomi</option>
-                                <option>Apple</option>
-                                <option>Samsung</option>
-                                <option>Motorola</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="checkout_1l clearfix">
-                        <p><input type="checkbox"> Create an account?</p>
-                    </div>
+                        <input type="hidden" name="TotalPrice" value="@Model.TotalPrice" />
+                        <br>
+                        <h6>                          
+                            <a href="/Cart" class="button">BACK TO CART</a>
+                            <button type="submit" class="button" id="checkoutButton">CHECKOUT</button>
+                        </h6>
+                    </form>
                 </div>
                 <div class="col-sm-4">
                     <div class="checkout_1r clearfix">
                         <h4 class="mgt">CART TOTALS</h4>
                         <hr class="hr_1">
-                        <h5>Sub Total <span class="pull-right">$230.00</span></h5>
-                        <h5>(+) Shipping <span class="pull-right">$20.00</span></h5>
-                        <hr class="hr_2"> 
-                        <h5>Total <span class="pull-right">$250.00</span></h5><br>
-                        <h4>PAYMENTS</h4>
-                        <hr class="hr_1">
-                        <p><input type="radio"> <span>Check Payments</span></p>
-                        <p><input type="radio"> <span>Cash On Delivery</span></p>
-                        <p><input type="radio"> <span>PayPal</span></p><br>
-                        <h6><a class="button" href="#">PROCEED TO CHECKOUT</a></h6>
+                        <h5>Product Total <span class="pull-right">@Model.ProductTotal.ToString("C")</span></h5>
+                        <h5>(-) Promotion <span class="pull-right">@Model.PromotionDiscount.ToString("C")</span></h5>
+                        <hr class="hr_2">
+                        <h5>Total <span class="pull-right">@Model.TotalPrice.ToString("C")</span></h5><br>
                     </div>
                 </div>
             </div>
@@ -127,17 +103,38 @@
 </section>
 
 @section Scripts {
+    <partial name="_ValidationScriptsPartial" />
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
+            $('#checkoutButton').click(function (event) {
+                event.preventDefault();
+                var selectedMethods = [];
+                $('input[name="paymentMethods"]:checked').each(function () {
+                    selectedMethods.push($(this).val());
+                });
+
+                if (selectedMethods.includes("12")) { // Assuming 12 is the ID for Bank Transfer
+                    $('#checkoutForm').attr('action', '@Url.Page("/PayOSRedirect")');
+                }
+
+                $('#checkoutForm').submit();
+            });
+
             var secondaryNav = $('.cd-secondary-nav'),
                 secondaryNavTopPosition = secondaryNav.offset().top;
-            $(window).on('scroll', function(){
-                if($(window).scrollTop() > secondaryNavTopPosition ) {
-                    secondaryNav.addClass('is-fixed');    
+            $(window).on('scroll', function () {
+                if ($(window).scrollTop() > secondaryNavTopPosition) {
+                    secondaryNav.addClass('is-fixed');
                 } else {
                     secondaryNav.removeClass('is-fixed');
                 }
-            });    
+            });
         });
     </script>
 }
+
+<style>
+    .text-muted {
+        color: #6c757d;
+    }
+</style>
